force-app/main/default/objects/Cart__c/Cart__c.object-meta.xml
<CustomObject>
    <description>Customer&apos;s shopping cart</description>
    <label>Customer Cart</label>
    <nameField>
        <displayFormat>Cart-{00000}</displayFormat>
        <label>Cart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>