force-app/main/default/objects/Cart__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What is a Customer Account?</description>
    <inlineHelpText>What is a Customer Account?</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>