force-app/main/default/objects/Cart__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>What is a Customer Cart Status?</description>
    <inlineHelpText>What is a Customer Cart Status?</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>