force-app/main/default/objects/Cart__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the customer?</description>
    <inlineHelpText>Who is the customer?</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>